# datapulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  build_exe.py  datapulse.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
DataPulse-Portable/: 启动DataPulse.bat
backend/: Dockerfile  analysis.py  api.py  app.py  auth.py  logging_config.py  requirements.txt  seed.py  settings.py  task_store.py  tasks.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AnalysisChart.vue  ScraperConfig.vue
frontend/src/layout/: Sidebar.vue
frontend/src/router/: index.js
frontend/src/views/: AIExtract.vue  Dashboard.vue  DataDashboard.vue  Login.vue  Register.vue  Scraper.vue  TextAnalysis.vue
nginx/: nginx.conf
spider/: __init__.py  ai_parser.py  browser_engine.py  cli.py  engine.py  exceptions.py  js_reverse.py  master.py  pagination.py  pipelines.py  plugin.py  proxy_pool.py  worker.py
spider/plugins/: __init__.py  html_parser.py
tests/: conftest.py  test_analysis.py  test_api.py  test_auth.py  test_engine.py  test_pipelines.py
