[project]
name = "datapulse"
version = "0.1.0"
description = "开箱即用的数据采集、分析与可视化平台"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DataPulse Team"},
]
keywords = ["spider", "crawler", "data-analysis", "scraping", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "pandas>=2.1",
    "numpy>=1.24",
    "jieba>=0.42",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
]

[project.urls]
homepage = "https://gitee.com/huiliyi122/datapulse"
repository = "https://gitee.com/huiliyi122/datapulse"
documentation = "https://gitee.com/huiliyi122/datapulse#readme"

[project.scripts]
datapulse = "spider.cli:main"

[tool.setuptools.packages.find]
include = ["spider*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
