[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapulse"
version = "0.3.1"
description = "生产级数据采集分析平台 - 双引擎爬虫、AI智能解析、分布式调度、可视化看板"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "绘梨衣", email = "huiliyi122@outlook.com"}]
keywords = [
    "spider", "crawler", "web-scraping", "data-analysis",
    "visualization", "async", "playwright", "ai-parser", "stealth",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.24,<3.0",
    "jieba>=0.42",
    "fastapi>=0.104,<1.0",
    "uvicorn[standard]>=0.24,<1.0",
    "scikit-learn>=1.3,<2.0",
    "requests>=2.31,<3.0",
    "fake-useragent>=1.4,<2.0",
    "tenacity>=8.2,<10.0",
    "openpyxl>=3.1,<4.0",
    "python-multipart>=0.0.6,<1.0",
    "playwright>=1.40,<2.0",
    "pyyaml>=6.0,<7.0",
    "slowapi>=0.1,<1.0",
]
dynamic = ["requires-python"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]
all = [
    "celery>=5.3",
    "redis>=5.0",
    "pymongo>=4.5",
]

[project.urls]
Homepage = "https://gitee.com/绘梨衣/datapulse"
Repository = "https://gitee.com/绘梨衣/datapulse"
Issues = "https://gitee.com/绘梨衣/datapulse/issues"
Changelog = "https://gitee.com/绘梨衣/datapulse"

[project.scripts]
datapulse = "spider.cli:main"

[tool.setuptools.packages.find]
include = ["spider*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
